[metadata]
name = lovecraft
version = attr: lovecraft.__version__
author = osamabinloggin
author_email = osamabinloggin@gmail.com
url = 'https://lovecraft.readthedocs.io/'
long_description = Wire layer code for 2018 Camp Navarro portal luminance project.

[options]
packages = find:
install_requires =
      attrs >= 17.4
